chore(kafka): Refactor to use Java record types instead of classes